# atelierTS

./: .env  .env.example  .gitignore  Dockerfile  README.md  connexion.py  docker-compose.yml  init.sql  main.py  pyproject.toml  readme.mkd
api/: main.py  services.py
bdd/: connexion.py  etl.py
data/: init.sql
ml/: data_preparation.py  model_preparation.py  modele.py  notebook_1_TS_univarie.ipynb  notebook_1_TS_univarie_avec_trous.ipynb  notebook_2_TS_multivarie.ipynb  notebook_2_TS_multivarie_a_trous.ipynb  notebook_3_TS_detection_anomalies.ipynb  notebook_3_TS_detection_anomalies_a_trous.ipynb
mlflow/: mlflow.db
