[project]
name = "atelierts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "holidays>=0.90",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.2",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tbats>=1.1.3",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
